--- a/vendor.html
+++ b/vendor.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProcureX</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>ProcureX - PCL Online Bidding System</title>
+    <link rel="icon" type="image/png" href="assets/img/pcl.png">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
 
@@ -34,6 +35,6 @@
     </section>
 
     <script type="module" src="firebase-config.js"></script>
-    <script type="module" src="vendor.js"></script>
+    <script type="module" src="assets/js/script.js"></script>
 </body>
 </html>
