--- a/admin.html
+++ b/admin.html
@@ -27,6 +27,27 @@
         </div>        
     </section>
 
+    <section>
+        <div class="container">
+            <button id="addVendorBtn" class="add-vendor-btn">Add Vendor</button>
+            <!-- Table -->
+            <table>
+                <thead>
+                    <tr>
+                        <th>Username</th>
+                        <th>Company</th>
+                        <th>Date Created</th>
+                        <th>Expiration</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody id="vendorTableBody">
+                    <!-- Data will be added dynamically -->
+                </tbody>
+            </table>
+        </div>
+    </section>
+
     <script type="module" src="firebase-config.js"></script>
     <script type="module" src="admin.js"></script>
 </body>
