--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     </section>
 
-    <script type="module" src="firebase-config.js"></script>
+    <script type="module" src="assets/js/firebase-config.js"></script>
     <script type="module" src="assets/js/script.js"></script>
 </body>
 </html>
