--- a/vendor.html
+++ b/vendor.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProcureX - PCL Online Bidding System</title>
     <link rel="icon" type="image/png" href="assets/img/pcl.png">
+    <link rel="stylesheet" href="assets/css/vendor.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+    
 </head>
 <body>
 
@@ -18,23 +20,9 @@
         </header>
     </section>
 
-        <!-- Categories -->
-    <section>
-        <div class="side-bar">
-            <h1>Categories</h1>
-            <ul>
-                <li><button>Truck</button></li>
-                <li><button>MHE</button></li>
-                <li><button>IT Equipment</button></li>
-            </ul>
-        </div>
-    </section>
+    <div class="Products"></div>
 
-    <section>
-        <div class="Products"></div>
-    </section>
-
-    <script type="module" src="firebase-config.js"></script>
-    <script type="module" src="assets/js/script.js"></script>
+    <script type="module" src="assets/js/firebase-config.js"></script>
+    <script type="module" src="assets/js/vendor.js"></script>
 </body>
 </html>
