--- a/admin/admin.html
+++ b/admin/admin.html
@@ -37,7 +37,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="header fixed-top d-flex align-items-center">
     <div class="d-flex align-items-center justify-content-between">
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a href="adminPage.html" class="logo d-flex align-items-center">
         <img src="../assets/img/pcl.png" alt="">
         <span class="d-none d-lg-block">ProcureX PCL Inc.</span>
       </a>
@@ -65,7 +65,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link " href="index.html">
+        <a class="nav-link " href="adminPage.html">
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
@@ -99,21 +99,21 @@
           <i class="bi bi-journal-text"></i><span>Bidding Records</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
         <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-            <li>
-                <a href="components-alerts.html">
-                    <i class="bi bi-circle"></i><span>IT Equipment</span>
-                </a>
-            </li>
-            <li>
-                <a href="components-accordion.html">
-                    <i class="bi bi-circle"></i><span>Trucks</span>
-                </a>
-            </li>
-            <li>
-                <a href="components-badges.html">
-                    <i class="bi bi-circle"></i><span>MHE</span>
-                </a>
-            </li>
+          <li>
+              <a href="../record/it.html">
+                  <i class="bi bi-circle"></i><span>IT Equipment</span>
+              </a>
+          </li>
+          <li>
+              <a href="../record/trucks.html">
+                  <i class="bi bi-circle"></i><span>Trucks</span>
+              </a>
+          </li>
+          <li>
+              <a href="../record/mhe.html">
+                  <i class="bi bi-circle"></i><span>MHE</span>
+              </a>
+          </li>
         </ul>
       </li><!-- End Forms Nav -->
 
@@ -123,36 +123,17 @@
       <li class="nav-heading">Pages</li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="profile.html">
-          <i class="bi bi-person"></i>
+        <a class="nav-link collapsed" href="admin.html">
+          <i class="bi bi-people"></i>
           <span>Admin</span>
         </a>
       </li><!-- End Profile Page Nav -->
-
       <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-people"></i><span>Users</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="charts-chartjs.html">
-              <i class="bi bi-circle"></i><span>Admin</span>
-            </a>
-          </li>
-          <li>
-            <a href="charts-apexcharts.html">
-              <i class="bi bi-circle"></i><span>Vendor</span>
-            </a>
-          </li>
-        </ul>
-      </li><!-- End Charts Nav -->
-      <li class="nav-item">
-        <a id="logoutBtnAdmin" class="nav-link collapsed">
-          <i class="bi bi-person"></i>
-          <span id="logoutBtnAdmin">Logout</span>
+        <a class="nav-link collapsed" href="Vendor.html">
+          <i class="bi bi-people"></i>
+          <span>Vendor</span>
         </a>
       </li>
-      
     </ul>
 
   </aside><!-- End Sidebar-->
@@ -163,81 +144,31 @@
       <h1>Dashboard</h1>
       <nav>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item"><a href="adminPage.html">Home</a></li>
           <li class="breadcrumb-item active">Dashboard</li>
         </ol>
       </nav>
     </div><!-- End Page Title -->
 
-    <section class="section dashboard">
-      <div class="row">
-
-            <!-- Sales Card -->
-            <div class="col-xxl-4 col-md-6">
-              <div class="card info-card users-card">
-                <div class="card-body">
-                  <h5 class="card-title">IT Equipment <span>| Status</span></h5>
-
-                  <div class="d-flex align-items-center">
-                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-tools"></i>
-                    </div>
-                    <div class="ps-3">
-                      <h6>0</h6>
-                      <span class="text-success small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">increase</span>
-
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-            </div><!-- End Sales Card -->
-
-            <!-- Revenue Card -->
-            <div class="col-xxl-4 col-md-6">
-              <div class="card info-card players-card">
-                <div class="card-body">
-                  <h5 class="card-title">Trucks <span>| Status</span></h5>
-
-                  <div class="d-flex align-items-center">
-                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-truck"></i>
-                    </div>
-                    <div class="ps-3">
-                      <h6>
-                        <span id="count-trucks"></span>
-                    </h6>
-                      <span class="text-success small pt-1 fw-bold">8%</span> <span class="text-muted small pt-2 ps-1">increase</span>
-
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-            </div>
-
-            <div class="col-xxl-4 col-xl-12">
-              <div class="card info-card colleges-card">
-                <div class="card-body">
-                  <h5 class="card-title">MHE <span>| Status</span></h5>
-                  <div class="d-flex align-items-center">
-                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-gear"></i>
-                    </div>
-                    <div class="ps-3">
-                      <h6>0</h6>
-                      <span class="text-danger small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">decrease</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-        </div>
-        <div class="row">
-            <div id="truckTables"></div>
-        </div>
+    <div class="container mt-4">
+      <div class="card">
+          <div class="card-body">
+              <input type="text" id="admin-search" class="form-control mt-3" placeholder="Search by name or username...">
+              <table class="table table-striped">
+                  <thead>
+                      <tr>
+                          <th>Name</th>
+                          <th>Username</th>
+                          <th>Action</th>
+                      </tr>
+                  </thead>
+                  <tbody id="admin-table-body">
+                      <!-- Data will be inserted here -->
+                  </tbody>
+              </table>
+          </div>
       </div>
-    </section>
+  </div>
 
   </main>
 
@@ -268,7 +199,7 @@
 
 
   <script type="module" src="../assets/js/admin/trucks.js"></script>
-  <script type="module" src="../assets/js/admin/acount.js"></script>
+  <script type="module" src="../assets/js/admin/account.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
