--- a/admin/vendor.html
+++ b/admin/vendor.html
@@ -65,7 +65,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link " href="../admin/adminPage.html">
+        <a class="nav-link " href="adminPage.html">
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
@@ -92,7 +92,7 @@
             </a>
           </li>
         </ul>
-      </li>
+      </li><!-- End Components Nav -->
 
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
@@ -123,14 +123,13 @@
       <li class="nav-heading">Pages</li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="../admin/admin.html">
+        <a class="nav-link collapsed" href="admin.html">
           <i class="bi bi-people"></i>
           <span>Admin</span>
         </a>
-      </li>
-
+      </li><!-- End Profile Page Nav -->
       <li class="nav-item">
-        <a class="nav-link collapsed" href="/admin/vendor.html">
+        <a class="nav-link collapsed" href="Vendor.html">
           <i class="bi bi-people"></i>
           <span>Vendor</span>
         </a>
@@ -142,107 +141,36 @@
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>IT Equipment</h1>
+      <h1>Dashboard</h1>
       <nav>
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="adminPage.html">Home</a></li>
-          <li class="breadcrumb-item active">IT Equipment Manage</li>
+          <li class="breadcrumb-item active">Dashboard</li>
         </ol>
       </nav>
     </div><!-- End Page Title -->
 
-    <section class="section dashboard">
-      <div class="row">
-            <div id="truckTables"></div>
-      </div>
-    </section>
-
-
-
-
-
-
-
-
-
-<!-- Update Truck Modal -->
-<div class="modal fade" id="updateModal" tabindex="-1" aria-labelledby="updateModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-          <div class="modal-header">
-              <h5 class="modal-title" id="updateModalLabel">Update Truck Details</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-              <form id="updateTruckForm">
-                  <input type="hidden" id="truckId">
-                  <input type="hidden" id="truckCollection">
-
-                  <div class="row mb-3">
-                      <div class="col-md-4">
-                          <label class="form-label">Units</label>
-                          <input type="number" class="form-control" id="updateUnits" required>
-                      </div>
-                      <div class="col-md-4">
-                          <label class="form-label">Van Type</label>
-                          <input type="text" class="form-control" id="updateVanType" required>
-                      </div>
-                      <div class="col-md-4">
-                          <label class="form-label">Tonnage</label>
-                          <input type="text" class="form-control" id="updateTonnage" required>
-                      </div>
-                  </div>
-
-                  <div class="row mb-3">
-                      <div class="col-md-4">
-                          <label class="form-label">Height</label>
-                          <input type="text" class="form-control" id="updateHeight" required>
-                      </div>
-                      <div class="col-md-4">
-                          <label class="form-label">Width</label>
-                          <input type="text" class="form-control" id="updateWidth" required>
-                      </div>
-                      <div class="col-md-4">
-                          <label class="form-label">Length</label>
-                          <input type="text" class="form-control" id="updateLength" required>
-                      </div>
-                  </div>
-
-                  <div class="row mb-3">
-                      <div class="col-md-4">
-                          <label class="form-label">Temperature</label>
-                          <input type="text" class="form-control" id="updateTemperature" required>
-                      </div>
-                      <div class="col-md-4">
-                          <label class="form-label">Ceiling Price</label>
-                          <input type="text" class="form-control" id="updateCeilingPrice" required>
-                      </div>
-                      <div class="col-md-4">
-                          <label class="form-label">Start Time</label>
-                          <input type="datetime-local" class="form-control" id="updateStartTime">
-                      </div>
-                  </div>
-
-                  <div class="row mt-4">
-                      <div class="col-12">
-                          <button type="submit" class="btn btn-primary me-2">Update Truck</button>
-                          <button type="button" class="btn btn-danger" id="removeTruckBtn">Remove Truck</button>
-                          <button type="button" class="btn btn-secondary float-end" data-bs-dismiss="modal">Close</button>
-                      </div>
-                  </div>
-              </form>
+    <div class="container mt-4">
+      <div class="card">
+          <div class="card-body">
+              <input type="text" id="admin-search" class="form-control mt-3" placeholder="Search by name or username...">
+              <table class="table table-striped">
+                  <thead>
+                      <tr>
+                          <th>Name</th>
+                          <th>Username</th>
+                          <th>Action</th>
+                      </tr>
+                  </thead>
+                  <tbody id="admin-table-body">
+                      <!-- Data will be inserted here -->
+                  </tbody>
+              </table>
           </div>
       </div>
   </div>
-</div>
 
-
-
-
-
-
-
-  </main><!-- End #main -->
+  </main>
 
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
@@ -268,6 +196,8 @@
   <!-- Template Main JS File -->
   <script src="../assetsAd/js/main.js"></script>
   <script type="module" src="../assets/js/firebase-config.js"></script>
+
+
   <script type="module" src="../assets/js/admin/trucks.js"></script>
   <script type="module" src="../assets/js/admin/account.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
