--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     </div>
 
 
-    <!-- Login Modal -->
     <div id="loginModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
@@ -46,5 +45,7 @@
 
     <script type="module" src="assets/js/firebase-config.js"></script>
     <script type="module" src="assets/js/script.js"></script>
+    <script type="module" src="assets/js/admin/account.js"></script>
+    <script type="module" src="assets/js/vendor/account.js"></script>
 </body>
 </html>
