--- a/products/mhe.html
+++ b/products/mhe.html
@@ -37,7 +37,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="header fixed-top d-flex align-items-center">
     <div class="d-flex align-items-center justify-content-between">
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a href="adminPage.html" class="logo d-flex align-items-center">
         <img src="../assets/img/pcl.png" alt="">
         <span class="d-none d-lg-block">ProcureX PCL Inc.</span>
       </a>
@@ -53,7 +53,7 @@
         </li>
         <li class="nav-item dropdown pe-3">
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <span id="displayName" class="d-none d-md-block ps-2"></span>
+            <span id="displayName" class="d-none d-md-block ps-2"></span> | <span id="logoutBtnAdmin">Logout</span>
           </a>
         </li>
       </ul>
@@ -65,7 +65,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link " href="../admin/index.html">
+        <a class="nav-link " href="../admin/adminPage.html">
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
@@ -99,21 +99,21 @@
           <i class="bi bi-journal-text"></i><span>Bidding Records</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
         <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-            <li>
-                <a href="components-alerts.html">
-                    <i class="bi bi-circle"></i><span>IT Equipment</span>
-                </a>
-            </li>
-            <li>
-                <a href="components-accordion.html">
-                    <i class="bi bi-circle"></i><span>Trucks</span>
-                </a>
-            </li>
-            <li>
-                <a href="components-badges.html">
-                    <i class="bi bi-circle"></i><span>MHE</span>
-                </a>
-            </li>
+          <li>
+            <a href="../record/it.html">
+                <i class="bi bi-circle"></i><span>IT Equipment</span>
+            </a>
+        </li>
+        <li>
+            <a href="../record/trucks.html">
+                <i class="bi bi-circle"></i><span>Trucks</span>
+            </a>
+        </li>
+        <li>
+            <a href="../record/mhe.html">
+                <i class="bi bi-circle"></i><span>MHE</span>
+            </a>
+        </li>
         </ul>
       </li><!-- End Forms Nav -->
 
@@ -123,37 +123,18 @@
       <li class="nav-heading">Pages</li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="../admin/profile.html">
-          <i class="bi bi-person"></i>
+        <a class="nav-link collapsed" href="../admin/admin.html">
+          <i class="bi bi-people"></i>
           <span>Admin</span>
         </a>
-      </li><!-- End Profile Page Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-people"></i><span>Users</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="charts-chartjs.html">
-              <i class="bi bi-circle"></i><span>Admin</span>
-            </a>
-          </li>
-          <li>
-            <a href="charts-apexcharts.html">
-              <i class="bi bi-circle"></i><span>Vendor</span>
-            </a>
-          </li>
-          
-        </ul>
-      </li>
-      <li class="nav-item">
-        <a id="logoutBtnAdmin" class="nav-link collapsed">
-          <i class="bi bi-person"></i>
-          <span id="logoutBtnAdmin">Logout</span>
-        </a>
       </li>
 
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="/admin/vendor.html">
+          <i class="bi bi-people"></i>
+          <span>Vendor</span>
+        </a>
+      </li>
     </ul>
 
   </aside><!-- End Sidebar-->
@@ -164,7 +145,7 @@
       <h1>MHE</h1>
       <nav>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item"><a href="adminPage.html">Home</a></li>
           <li class="breadcrumb-item active">MHE Manage</li>
         </ol>
       </nav>
@@ -288,7 +269,7 @@
   <script src="../assetsAd/js/main.js"></script>
   <script type="module" src="../assets/js/firebase-config.js"></script>
   <script type="module" src="../assets/js/admin/trucks.js"></script>
-  <script type="module" src="../assets/js/admin/acount.js"></script>
+  <script type="module" src="../assets/js/admin/account.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
