--- a/record/it.html
+++ b/record/it.html
@@ -99,21 +99,21 @@
           <i class="bi bi-journal-text"></i><span>Bidding Records</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
         <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-              <a href="../record/it.html">
-                  <i class="bi bi-circle"></i><span>IT Equipment</span>
-              </a>
-          </li>
-          <li>
-              <a href="../record/trucks.html">
-                  <i class="bi bi-circle"></i><span>Trucks</span>
-              </a>
-          </li>
-          <li>
-              <a href="../record/mhe.html">
-                  <i class="bi bi-circle"></i><span>MHE</span>
-              </a>
-          </li>
+            <li>
+                <a href="it.html">
+                    <i class="bi bi-circle"></i><span>IT Equipment</span>
+                </a>
+            </li>
+            <li>
+                <a href="trucks.html">
+                    <i class="bi bi-circle"></i><span>Trucks</span>
+                </a>
+            </li>
+            <li>
+                <a href="mhe.html">
+                    <i class="bi bi-circle"></i><span>MHE</span>
+                </a>
+            </li>
         </ul>
       </li><!-- End Forms Nav -->
 
@@ -135,6 +135,7 @@
           <span>Vendor</span>
         </a>
       </li>
+
     </ul>
 
   </aside><!-- End Sidebar-->
@@ -142,100 +143,16 @@
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>IT Equipment</h1>
+      <h1>Records</h1>
       <nav>
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="adminPage.html">Home</a></li>
-          <li class="breadcrumb-item active">IT Equipment Manage</li>
+          <li class="breadcrumb-item active">Bidding Record</li>
         </ol>
       </nav>
     </div><!-- End Page Title -->
 
-    <section class="section dashboard">
-      <div class="row">
-            <div id="truckTables"></div>
-      </div>
-    </section>
-
-
-
-
-
-
-
-
-
-<!-- Update Truck Modal -->
-<div class="modal fade" id="updateModal" tabindex="-1" aria-labelledby="updateModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-          <div class="modal-header">
-              <h5 class="modal-title" id="updateModalLabel">Update Truck Details</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-              <form id="updateTruckForm">
-                  <input type="hidden" id="truckId">
-                  <input type="hidden" id="truckCollection">
-
-                  <div class="row mb-3">
-                      <div class="col-md-4">
-                          <label class="form-label">Units</label>
-                          <input type="number" class="form-control" id="updateUnits" required>
-                      </div>
-                      <div class="col-md-4">
-                          <label class="form-label">Van Type</label>
-                          <input type="text" class="form-control" id="updateVanType" required>
-                      </div>
-                      <div class="col-md-4">
-                          <label class="form-label">Tonnage</label>
-                          <input type="text" class="form-control" id="updateTonnage" required>
-                      </div>
-                  </div>
-
-                  <div class="row mb-3">
-                      <div class="col-md-4">
-                          <label class="form-label">Height</label>
-                          <input type="text" class="form-control" id="updateHeight" required>
-                      </div>
-                      <div class="col-md-4">
-                          <label class="form-label">Width</label>
-                          <input type="text" class="form-control" id="updateWidth" required>
-                      </div>
-                      <div class="col-md-4">
-                          <label class="form-label">Length</label>
-                          <input type="text" class="form-control" id="updateLength" required>
-                      </div>
-                  </div>
-
-                  <div class="row mb-3">
-                      <div class="col-md-4">
-                          <label class="form-label">Temperature</label>
-                          <input type="text" class="form-control" id="updateTemperature" required>
-                      </div>
-                      <div class="col-md-4">
-                          <label class="form-label">Ceiling Price</label>
-                          <input type="text" class="form-control" id="updateCeilingPrice" required>
-                      </div>
-                      <div class="col-md-4">
-                          <label class="form-label">Start Time</label>
-                          <input type="datetime-local" class="form-control" id="updateStartTime">
-                      </div>
-                  </div>
-
-                  <div class="row mt-4">
-                      <div class="col-12">
-                          <button type="submit" class="btn btn-primary me-2">Update Truck</button>
-                          <button type="button" class="btn btn-danger" id="removeTruckBtn">Remove Truck</button>
-                          <button type="button" class="btn btn-secondary float-end" data-bs-dismiss="modal">Close</button>
-                      </div>
-                  </div>
-              </form>
-          </div>
-      </div>
-  </div>
-</div>
-
+    <div id="truckTables"></div>
 
 
 
@@ -268,8 +185,10 @@
   <!-- Template Main JS File -->
   <script src="../assetsAd/js/main.js"></script>
   <script type="module" src="../assets/js/firebase-config.js"></script>
-  <script type="module" src="../assets/js/admin/trucks.js"></script>
   <script type="module" src="../assets/js/admin/account.js"></script>
+
+  
+  <script type="module" src="../assets/js/bidrecord/trucks.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
