--- a/record/trucks.html
+++ b/record/trucks.html
@@ -65,7 +65,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link " href="index.html">
+        <a class="nav-link " href="../admin/adminPage.html">
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
@@ -92,7 +92,7 @@
             </a>
           </li>
         </ul>
-      </li><!-- End Components Nav -->
+      </li>
 
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
@@ -100,17 +100,17 @@
         </a>
         <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
             <li>
-                <a href="components-alerts.html">
+                <a href="it.html">
                     <i class="bi bi-circle"></i><span>IT Equipment</span>
                 </a>
             </li>
             <li>
-                <a href="components-accordion.html">
+                <a href="trucks.html">
                     <i class="bi bi-circle"></i><span>Trucks</span>
                 </a>
             </li>
             <li>
-                <a href="components-badges.html">
+                <a href="mhe.html">
                     <i class="bi bi-circle"></i><span>MHE</span>
                 </a>
             </li>
@@ -123,36 +123,18 @@
       <li class="nav-heading">Pages</li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="#">
-          <i class="bi bi-person"></i>
+        <a class="nav-link collapsed" href="../admin/admin.html">
+          <i class="bi bi-people"></i>
           <span>Admin</span>
         </a>
-      </li><!-- End Profile Page Nav -->
+      </li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-people"></i><span>Users</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="charts-chartjs.html">
-              <i class="bi bi-circle"></i><span>Admin</span>
-            </a>
-          </li>
-          <li>
-            <a href="charts-apexcharts.html">
-              <i class="bi bi-circle"></i><span>Vendor</span>
-            </a>
-          </li>
-        </ul>
-      </li><!-- End Charts Nav -->
-      <li class="nav-item">
-        <a id="logoutBtnAdmin" class="nav-link collapsed">
-          <i class="bi bi-person"></i>
-          <span id="logoutBtnAdmin">Logout</span>
+        <a class="nav-link collapsed" href="/admin/vendor.html">
+          <i class="bi bi-people"></i>
+          <span>Vendor</span>
         </a>
       </li>
-      
     </ul>
 
   </aside><!-- End Sidebar-->
@@ -160,26 +142,23 @@
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>Dashboard</h1>
+      <h1>Records</h1>
       <nav>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-          <li class="breadcrumb-item active">Dashboard</li>
+          <li class="breadcrumb-item"><a href="adminPage.html">Home</a></li>
+          <li class="breadcrumb-item active">Bidding Record</li>
         </ol>
       </nav>
     </div><!-- End Page Title -->
 
-    <section class="section dashboard">
-      <div class="row">
+    <div id="truckTables"></div>
 
-            
-        <div class="row">
-            <div id="truckTables"></div>
-        </div>
-      </div>
-    </section>
 
-  </main>
+
+
+
+
+  </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
@@ -206,9 +185,8 @@
   <script src="../assetsAd/js/main.js"></script>
   <script type="module" src="../assets/js/firebase-config.js"></script>
 
-
-  <script type="module" src="../assets/js/admin/trucks.js"></script>
-  <script type="module" src="../assets/js/admin/acount.js"></script>
+  <script type="module" src="../assets/js/bidrecord/trucks.js"></script>
+  <script type="module" src="../assets/js/admin/account.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
