Done Bid Record

--- a/record/trucks.html
+++ b/record/trucks.html
@@ -151,7 +151,9 @@
       </nav>
     </div><!-- End Page Title -->
 
+
     <div id="truckTables"></div>
+    <!-- <div id="bidsDisplay"></div> -->
 
 
 
