--- a/admin/admin.html
+++ b/admin/admin.html
@@ -33,110 +33,89 @@
 </head>
 
 <body>
+<!-- ======= Header ======= -->
+<header id="header" class="header fixed-top d-flex align-items-center">
+  <div class="d-flex align-items-center justify-content-between">
+    <a href="index.html" class="logo d-flex align-items-center">
+      <img src="../assets/img/pcl.png" alt="">
+      <span class="d-none d-lg-block">ProcureX PCL Inc.</span>
+    </a>
+    <i class="bi bi-list toggle-sidebar-btn"></i>
+  </div>
+  <nav class="header-nav ms-auto">
+    <ul class="d-flex align-items-center">
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="header fixed-top d-flex align-items-center">
-    <div class="d-flex align-items-center justify-content-between">
-      <a href="adminPage.html" class="logo d-flex align-items-center">
-        <img src="../assets/img/pcl.png" alt="">
-        <span class="d-none d-lg-block">ProcureX PCL Inc.</span>
-      </a>
-      <i class="bi bi-list toggle-sidebar-btn"></i>
-    </div>
-    <nav class="header-nav ms-auto">
-      <ul class="d-flex align-items-center">
-
-        <li class="nav-item d-block d-lg-none">
-          <a class="nav-link nav-icon search-bar-toggle " href="#">
-            <i class="bi bi-search"></i>
-          </a>
-        </li>
-        <li class="nav-item dropdown pe-3">
-          <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <span id="displayName" class="d-none d-md-block ps-2"></span> | <span id="logoutBtnAdmin">Logout</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <!-- ======= Sidebar ======= -->
-  <aside id="sidebar" class="sidebar">
-
-    <ul class="sidebar-nav" id="sidebar-nav">
-
-      <li class="nav-item">
-        <a class="nav-link " href="adminPage.html">
-          <i class="bi bi-grid"></i>
-          <span>Dashboard</span>
+      <li class="nav-item d-block d-lg-none">
+        <a class="nav-link nav-icon search-bar-toggle " href="#">
+          <i class="bi bi-search"></i>
         </a>
-      </li><!-- End Dashboard Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-menu-button-wide"></i><span>Products Manage</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="../products/it.html">
-              <i class="bi bi-circle"></i><span>IT Equipment</span>
-            </a>
-          </li>
-          <li>
-            <a href="../products/trucks.html">
-              <i class="bi bi-circle"></i><span>Trucks</span>
-            </a>
-          </li>
-          <li>
-            <a href="../products/mhe.html">
-              <i class="bi bi-circle"></i><span>MHE</span>
-            </a>
-          </li>
-        </ul>
-      </li><!-- End Components Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-journal-text"></i><span>Bidding Records</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-              <a href="../record/it.html">
-                  <i class="bi bi-circle"></i><span>IT Equipment</span>
-              </a>
-          </li>
-          <li>
-              <a href="../record/trucks.html">
-                  <i class="bi bi-circle"></i><span>Trucks</span>
-              </a>
-          </li>
-          <li>
-              <a href="../record/mhe.html">
-                  <i class="bi bi-circle"></i><span>MHE</span>
-              </a>
-          </li>
-        </ul>
-      </li><!-- End Forms Nav -->
-
-
-      
-
-      <li class="nav-heading">Pages</li>
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="admin.html">
-          <i class="bi bi-people"></i>
-          <span>Admin</span>
-        </a>
-      </li><!-- End Profile Page Nav -->
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="Vendor.html">
-          <i class="bi bi-people"></i>
-          <span>Vendor</span>
+      </li>
+      <li class="nav-item dropdown pe-3">
+        <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
+          <span id="displayName" class="d-none d-md-block ps-2"></span> | <span id="logoutBtnAdmin">Logout</span>
         </a>
       </li>
     </ul>
+  </nav>
+</header>
+<!-- ======= Sidebar ======= -->
+<aside id="sidebar" class="sidebar">
 
-  </aside><!-- End Sidebar-->
+  <ul class="sidebar-nav" id="sidebar-nav">
+
+    <li class="nav-item">
+      <a class="nav-link " href="adminPage.html">
+        <i class="bi bi-grid"></i>
+        <span>Dashboard</span>
+      </a>
+    </li>
+
+    <li class="nav-item">
+      <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
+        <i class="bi bi-menu-button-wide"></i><span>Event Manage</span><i class="bi bi-chevron-down ms-auto"></i>
+      </a>
+      <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+        <li>
+          <a href="events.html"> <!-- ======= Nakadynamic .html?#1 ======= -->
+            <i class="bi bi-circle"></i><span>[Event Name]</span>
+          </a>
+        </li>
+      </ul>
+    </li>
+
+    <li class="nav-item">
+      <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
+        <i class="bi bi-journal-text"></i><span>Bidding Records</span><i class="bi bi-chevron-down ms-auto"></i>
+      </a>
+      <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+          <li>
+              <a href="eventrecord.html"> <!-- ======= Nakadynamic .html?#1 ======= -->
+                  <i class="bi bi-circle"></i><span>[Event Name]</span>
+              </a>
+          </li>
+      </ul>
+    </li>
+
+
+    
+
+    <li class="nav-heading">Pages</li>
+
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="admin.html">
+        <i class="bi bi-people"></i>
+        <span>Admin</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="Vendor.html">
+        <i class="bi bi-people"></i>
+        <span>Vendor</span>
+      </a>
+    </li>
+  </ul>
+
+</aside><!-- End Sidebar-->
 
   <main id="main" class="main">
 
