--- a/admin/adminPage.html
+++ b/admin/adminPage.html
@@ -90,7 +90,7 @@
         </a>
         <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
             <li>
-                <a href="../record/it.html"> <!-- ======= Nakadynamic .html?#1 ======= -->
+                <a href="eventrecord.html"> <!-- ======= Nakadynamic .html?#1 ======= -->
                     <i class="bi bi-circle"></i><span>[Event Name]</span>
                 </a>
             </li>
