--- a/admin/eventrecord.html
+++ b/admin/eventrecord.html
@@ -72,7 +72,7 @@
 
       <li class="nav-item">
         <a class="nav-link" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
-            <i class="bi bi-menu-button-wide"></i><span>Event Manage</span><i class="bi bi-chevron-down ms-auto"></i>
+            <i class="bi bi-menu-button-wide"></i><span>Event Manager</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
         <ul id="components-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
             <li>
@@ -101,6 +101,12 @@
 
       <li class="nav-heading">Pages</li>
 
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="showEvents.html">
+          <i class="bi bi-people"></i>
+          <span>Event List</span>
+        </a>
+      </li>
       <li class="nav-item">
         <a class="nav-link collapsed" href="admin.html">
           <i class="bi bi-people"></i>
