Changed to Auction. Fixed some bugs

--- a/admin/showEvents.html
+++ b/admin/showEvents.html
@@ -187,7 +187,8 @@
         <input type="datetime-local" id="editEndTime" style="width: 90%; padding: 8px; margin-bottom: 10px; border-radius: 5px; border: 1px solid #aaa;">
         <br>
         <button id="updateEvent" style="padding: 10px 15px; border: none; cursor: pointer; border-radius: 4px; margin: 5px; background: #28a745; color: white;">Update</button>
-        <button id="closeEditModal" style="padding: 10px 15px; border: none; cursor: pointer; border-radius: 4px; margin: 5px; background: #dc3545; color: white;">Close</button>
+        <button id="deleteEvent" style="padding: 10px 15px; border: none; cursor: pointer; border-radius: 4px; margin: 5px; background: #dc3545; color: white;">Delete</button>
+        <button id="closeEditModal" style="padding: 10px 15px; border: none; cursor: pointer; border-radius: 4px; margin: 5px; background: #5c636a; color: white;">Close</button>
     </div>
 </div>
 
