--- a/admin/vendor.html
+++ b/admin/vendor.html
@@ -112,7 +112,7 @@
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link collapsed" href="Vendor.html">
+      <a class="nav-link collapsed" href="vendor.html">
         <i class="bi bi-people"></i>
         <span>Vendor</span>
       </a>
